Fix header on safari

--- a/components/styles/header.module.scss
+++ b/components/styles/header.module.scss
@@ -1,3 +1,8 @@
+.wrapper {
+  background: var(--overlay-dark);
+  padding: var(--spacing) 0;
+}
+
 .title,
 .subtitle {
   margin-top: 0;
