--- a/components/styles/icon-link.module.scss
+++ b/components/styles/icon-link.module.scss
@@ -1,6 +1,6 @@
 .iconLink {
-  max-width: 35px;
-  max-height: 35px;
+  max-width: 30px;
+  max-height: 30px;
   flex: 1;
   &:hover,
   &:active,
