--- a/pages/styles/global.scss
+++ b/pages/styles/global.scss
@@ -1,6 +1,7 @@
 body {
   --background: #473a8f;
   --background-light: #3a698f;
+  --overlay-dark: rgba(0, 0, 0, 0.199);
   --highlight: rgba(256, 256, 256, 0.1);
   --text: rgba(255, 255, 255, 0.8);
   --accent: #ffffff;
