--- a/pages/styles/index.module.scss
+++ b/pages/styles/index.module.scss
@@ -5,10 +5,6 @@
   min-height: 100vh;
 }
 
-.pageBody {
-  padding-top: 20px;
-}
-
 .content {
   padding: 0 var(--spacing);
 }
